Add workload scheduling

--- a/config/crd/bases/opni.io_opniclusters.yaml
+++ b/config/crd/bases/opni.io_opniclusters.yaml
@@ -450,6 +450,10 @@ spec:
                                     type: array
                                 type: object
                             type: object
+                          nodeSelector:
+                            additionalProperties:
+                              type: string
+                            type: object
                           replicas:
                             format: int32
                             type: integer
@@ -472,6 +476,22 @@ spec:
                                   x-kubernetes-int-or-string: true
                                 type: object
                             type: object
+                          tolerations:
+                            items:
+                              properties:
+                                effect:
+                                  type: string
+                                key:
+                                  type: string
+                                operator:
+                                  type: string
+                                tolerationSeconds:
+                                  format: int64
+                                  type: integer
+                                value:
+                                  type: string
+                              type: object
+                            type: array
                         type: object
                       data:
                         properties:
@@ -829,6 +849,10 @@ spec:
                                     type: array
                                 type: object
                             type: object
+                          nodeSelector:
+                            additionalProperties:
+                              type: string
+                            type: object
                           replicas:
                             format: int32
                             type: integer
@@ -851,6 +875,22 @@ spec:
                                   x-kubernetes-int-or-string: true
                                 type: object
                             type: object
+                          tolerations:
+                            items:
+                              properties:
+                                effect:
+                                  type: string
+                                key:
+                                  type: string
+                                operator:
+                                  type: string
+                                tolerationSeconds:
+                                  format: int64
+                                  type: integer
+                                value:
+                                  type: string
+                              type: object
+                            type: array
                         type: object
                       kibana:
                         properties:
@@ -1208,6 +1248,10 @@ spec:
                                     type: array
                                 type: object
                             type: object
+                          nodeSelector:
+                            additionalProperties:
+                              type: string
+                            type: object
                           replicas:
                             format: int32
                             type: integer
@@ -1230,6 +1274,22 @@ spec:
                                   x-kubernetes-int-or-string: true
                                 type: object
                             type: object
+                          tolerations:
+                            items:
+                              properties:
+                                effect:
+                                  type: string
+                                key:
+                                  type: string
+                                operator:
+                                  type: string
+                                tolerationSeconds:
+                                  format: int64
+                                  type: integer
+                                value:
+                                  type: string
+                              type: object
+                            type: array
                         type: object
                       master:
                         properties:
@@ -1587,6 +1647,10 @@ spec:
                                     type: array
                                 type: object
                             type: object
+                          nodeSelector:
+                            additionalProperties:
+                              type: string
+                            type: object
                           replicas:
                             format: int32
                             type: integer
@@ -1609,9 +1673,45 @@ spec:
                                   x-kubernetes-int-or-string: true
                                 type: object
                             type: object
+                          tolerations:
+                            items:
+                              properties:
+                                effect:
+                                  type: string
+                                key:
+                                  type: string
+                                operator:
+                                  type: string
+                                tolerationSeconds:
+                                  format: int64
+                                  type: integer
+                                value:
+                                  type: string
+                              type: object
+                            type: array
                         type: object
                     type: object
                 type: object
+              globalNodeSelector:
+                additionalProperties:
+                  type: string
+                type: object
+              globalTolerations:
+                items:
+                  properties:
+                    effect:
+                      type: string
+                    key:
+                      type: string
+                    operator:
+                      type: string
+                    tolerationSeconds:
+                      format: int64
+                      type: integer
+                    value:
+                      type: string
+                  type: object
+                type: array
               nats:
                 properties:
                   authMethod:
@@ -1622,6 +1722,10 @@ spec:
                     type: string
                   natsURL:
                     type: string
+                  nodeSelector:
+                    additionalProperties:
+                      type: string
+                    type: object
                   passwordFrom:
                     properties:
                       key:
@@ -1636,6 +1740,22 @@ spec:
                   replicas:
                     format: int32
                     type: integer
+                  tolerations:
+                    items:
+                      properties:
+                        effect:
+                          type: string
+                        key:
+                          type: string
+                        operator:
+                          type: string
+                        tolerationSeconds:
+                          format: int64
+                          type: integer
+                        value:
+                          type: string
+                      type: object
+                    type: array
                   username:
                     type: string
                 type: object
@@ -1701,6 +1821,26 @@ spec:
                               type: string
                           type: object
                         type: array
+                      nodeSelector:
+                        additionalProperties:
+                          type: string
+                        type: object
+                      tolerations:
+                        items:
+                          properties:
+                            effect:
+                              type: string
+                            key:
+                              type: string
+                            operator:
+                              type: string
+                            tolerationSeconds:
+                              format: int64
+                              type: integer
+                            value:
+                              type: string
+                          type: object
+                        type: array
                     type: object
                   gpuController:
                     properties:
@@ -1714,6 +1854,26 @@ spec:
                         items:
                           properties:
                             name:
+                              type: string
+                          type: object
+                        type: array
+                      nodeSelector:
+                        additionalProperties:
+                          type: string
+                        type: object
+                      tolerations:
+                        items:
+                          properties:
+                            effect:
+                              type: string
+                            key:
+                              type: string
+                            operator:
+                              type: string
+                            tolerationSeconds:
+                              format: int64
+                              type: integer
+                            value:
                               type: string
                           type: object
                         type: array
@@ -1733,6 +1893,10 @@ spec:
                               type: string
                           type: object
                         type: array
+                      nodeSelector:
+                        additionalProperties:
+                          type: string
+                        type: object
                       pretrainedModels:
                         items:
                           properties:
@@ -2115,6 +2279,22 @@ spec:
                           - name
                           type: object
                         type: array
+                      tolerations:
+                        items:
+                          properties:
+                            effect:
+                              type: string
+                            key:
+                              type: string
+                            operator:
+                              type: string
+                            tolerationSeconds:
+                              format: int64
+                              type: integer
+                            value:
+                              type: string
+                          type: object
+                        type: array
                     type: object
                   payloadReceiver:
                     properties:
@@ -2131,6 +2311,26 @@ spec:
                               type: string
                           type: object
                         type: array
+                      nodeSelector:
+                        additionalProperties:
+                          type: string
+                        type: object
+                      tolerations:
+                        items:
+                          properties:
+                            effect:
+                              type: string
+                            key:
+                              type: string
+                            operator:
+                              type: string
+                            tolerationSeconds:
+                              format: int64
+                              type: integer
+                            value:
+                              type: string
+                          type: object
+                        type: array
                     type: object
                   preprocessing:
                     properties:
@@ -2144,6 +2344,26 @@ spec:
                         items:
                           properties:
                             name:
+                              type: string
+                          type: object
+                        type: array
+                      nodeSelector:
+                        additionalProperties:
+                          type: string
+                        type: object
+                      tolerations:
+                        items:
+                          properties:
+                            effect:
+                              type: string
+                            key:
+                              type: string
+                            operator:
+                              type: string
+                            tolerationSeconds:
+                              format: int64
+                              type: integer
+                            value:
                               type: string
                           type: object
                         type: array
