--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -3,8 +3,9 @@ resources:
 - _v1beta1_logadapter.yaml
 - _v1beta1_opnicluster.yaml
 - _v1beta1_pretrainedmodel.yaml
-- _v1_clusterpolicy.yaml
+# - _v1_clusterpolicy.yaml
 # - _v1_clusterpolicy-vgpu.yaml
+- _v1beta1_gpupolicyadapter-vgpu.yaml
 - _v1_nodefeaturediscovery.yaml
-- _v1beta1_gpupolicyadapter.yaml
+# - _v1beta1_gpupolicyadapter.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
